<resources>
    <string name="app_name">LaderAppen2</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="routes">Routes</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="steering">Steering</string>
    <string name="devices">Devices</string>
    <string name="temp_text">Temporary fragment</string>
    <string name="routes_text">Routes fragment</string>
    <string name="home_text">Home fragment</string>
    <string name="drive_text">Drive fragment</string>
    <string name="unableToConnect">Unable to connect device</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="btNotSupported">Your device does not support Bluetooth</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="connectionLost">Connection lost</string>
    <string name="tryAgain">Try again</string>
    <string name="auto">Auto</string>
    <string name="drive">Drive</string>
    <string name="loadingDotDotDot">Loading...</string>
    <string name="route_date">%1$s</string>
    <string name="start_position">Start</string>
    <string name="end_position">End</string>
    <string name="position_point">Position</string>
    <string name="ca_position">Collision avoidance</string>
    <string name="y_circle">Yellow circle</string>
    <string name="b_circle">blue circle</string>
    <string name="r_circle">red circle</string>
    <string name="g_circle">green circle</string>
</resources>
