<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/start_position_view"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_shape"
                android:contentDescription="@string/g_circle" />

            <TextView
                android:text="@string/start_position"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/end_position_view"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_shape"
                android:backgroundTint="@color/colorRed"
                android:contentDescription="@string/r_circle" />

            <TextView
                android:text="@string/end_position"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/position_view"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_shape"
                android:backgroundTint="@color/colorPrimaryDark"
                android:contentDescription="@string/b_circle" />

            <TextView
                android:text="@string/position_point"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/collision_avoidance_view"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_shape"
                android:backgroundTint="@color/colorSecondary"
                android:contentDescription="@string/y_circle" />

            <TextView
                android:text="@string/ca_position"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>