<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@drawable/secondary_background">

    <RelativeLayout
        android:id="@+id/header_icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:src="@drawable/logo_husq_1"
            android:layout_alignParentStart="true"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/logo_laderlappen"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/heading_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="viewStart"
        android:textSize="52sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/header_icons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_vert_5"
        app:layout_constraintVertical_chainStyle="packed"/>

    <RelativeLayout
        android:id="@+id/layout_bluetooth_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_vert_20"
        app:layout_constraintEnd_toEndOf="@id/guide_vert_85"
        app:layout_constraintTop_toBottomOf="@id/heading_settings"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/bluetooth"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_alignParentStart="true"/>

        <ImageButton
            android:id="@+id/bluetooth_btn_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="30dp"
            android:background="@drawable/button_bluetooth_selector"
            android:src="@drawable/ic_bluetooth_black_24dp"
            android:layout_toLeftOf="@id/bluetooth_btn_off"/>

        <ImageButton
            android:id="@+id/bluetooth_btn_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_bluetooth_selector"
            android:src="@drawable/ic_bluetooth_disabled_black_24dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_steering_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/guide_vert_20"
        app:layout_constraintEnd_toEndOf="@id/guide_vert_85"
        app:layout_constraintTop_toBottomOf="@id/layout_bluetooth_btn"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/steering"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_alignParentStart="true"/>

        <ImageButton
            android:id="@+id/steering_btn_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="L"
            android:layout_marginEnd="30dp"
            android:background="@drawable/button_steering_selector"
            android:layout_toLeftOf="@id/steering_btn_one"/>

        <ImageButton
            android:id="@+id/steering_btn_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="O"
            android:layout_marginEnd="30dp"
            android:background="@drawable/button_steering_selector"
            android:layout_toLeftOf="@id/steering_btn_right"/>

        <ImageButton
            android:id="@+id/steering_btn_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R"
            android:background="@drawable/button_steering_selector"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    
    <TextView
        android:id="@+id/txt_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devices"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@id/guide_vert_20"
        app:layout_constraintTop_toBottomOf="@id/layout_steering_btn"/>
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guide_vert_25"
        app:layout_constraintEnd_toEndOf="@id/guide_vert_85"
        app:layout_constraintTop_toBottomOf="@id/txt_devices"
        app:layout_constraintBottom_toBottomOf="@id/guide_hori_80"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1234-1234-1234-1234"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"/>

            <ImageButton
                android:id="@+id/device_connected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_connect_selector"/>
        </RelativeLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_add_device_selector"
            android:layout_marginTop="15dp"/>

    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_hori_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_hori_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_vert_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_vert_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_vert_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_vert_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_vert_85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"/>


</androidx.constraintlayout.widget.ConstraintLayout>

